# Embedded_SpecData_Collection

./: CMakeLists.txt  HIERARCHY.md  PLAN.md  README.md
common/: app_types.hpp  config.cpp  config.hpp  logging.cpp  logging.hpp  net_utils.hpp  protocol.cpp  protocol.hpp
config/: master.json  slave.json
master/: main.cpp  master_app.cpp  master_app.hpp  master_link.cpp  master_link.hpp
slave/: main.cpp  slave_app.cpp  slave_app.hpp
